samples/_failures_safe/1761464813_c3a85d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9bd3933d.c: In function ‘main’:
./samples/SAFE/__tmp_9bd3933d.c:146:9: error: expected expression at end of input
  146 |         for (size_t j = 0; j <
      |         ^~~
./samples/SAFE/__tmp_9bd3933d.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9bd3933d.c:146:9: error: expected declaration or statement at end of input
